--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
         "vite": "^5.0",
         "vue": "^3.4.0",
         "vue-tsc": "^1.8.27"
+    },
+    "dependencies": {
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "lucide-vue-next": "^0.359.0",
+        "radix-vue": "^1.5.3",
+        "tailwind-merge": "^2.2.2",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
