--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
         "vue-tsc": "^1.8.27"
     },
     "dependencies": {
+        "@vueuse/core": "^10.9.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "lucide-vue-next": "^0.359.0",
         "radix-vue": "^1.5.3",
         "tailwind-merge": "^2.2.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "vue-router": "^4.0.13"
     }
 }
